--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DXR Zone</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <section class="" section--top>
-        <img class="img--logo img-dxn-zone" src="images/dxn-zone.png">
-        <img class="img--logo img-digital-engine" src="images/digital-engine.png">
+    <section class="section--top" >
+        <img class="img--logo img--dxn-zone" src="images/dxn-zone.png">
+        <img class="img--logo img--digital-engine" src="images/digital-engine.png">
         <canvas id="drawingCanvas"></canvas>
     </section>
     <section class="section--about">
@@ -34,6 +35,30 @@
             </div>
             <div class="gallery__item">
                 <img class="gallery__img" src="images/gallery_4.PNG">
+            </div>
+        </div>
+    </section>
+    <section class="section--contact">
+        <div class="border"></div>
+        <div class="contact__inner">
+            <div class="contact__column">
+                <div class="contact__text">
+                    DXN ZoNE LTD.
+                    <br>
+                    Unit 11, Airbite Studios
+                    <br>
+                    180 New Cross 
+                    <br>
+                    London
+                </div>
+            </div>
+            <div class="contact__column">
+                <div class="contact__text">
+                    <a href="#">Instagram</a>
+                </div>
+                <div class="contact__text">
+                    <a href="#">Facebook</a>
+                </div>
             </div>
         </div>
     </section>
